tests/NormalTests/paczka1/small_fuzzy/55050626.err
Error in line 10: bUpC A549 97,5
Error in line 7: NtnNoURQzuV S561 26,2
